cmake_minimum_required(VERSION 3.19)
project(BlueLeopard)

set(CMAKE_CXX_STANDARD 11)
add_executable(BlueLeopard main.cpp)
add_executable(2-1 chapter2/2-1.cpp)
add_executable(2-2 chapter2/2-2.cpp)
add_executable(2-3 chapter2/2-3.cpp)
add_executable(2-4 chapter2/2-4.cpp)
add_executable(2-5 chapter2/2-5.cpp)
add_executable(2-6 chapter2/2-6.cpp)
add_executable(2-7 chapter2/2-7.cpp)
add_executable(2-8 chapter2/2-8.cpp)
add_executable(2-9 chapter2/2-9.cpp)
add_executable(2-10 chapter2/2-10.cpp)
add_executable(2-11 chapter2/2-11.cpp)
add_executable(3-1 chapter3/3-1.cpp)
add_executable(3-2 chapter3/3-2.cpp)
add_executable(3-4 chapter3/3-4.cpp)
add_executable(3-8 chapter3/3-8.cpp)
add_executable(3-9-1 chapter3/3-9-1.cpp)
add_executable(3-10 chapter3/3-10.cpp)
add_executable(3-9-2 chapter3/3-9-2.cpp)
add_executable(3-11 chapter3/3-11.cpp)
add_executable(3-13 chapter3/3-13.cpp)
add_executable(3-14 chapter3/3-14.cpp)
add_executable(4-2 chapter4/4-2.cpp)
add_executable(4-4 chapter4/4-4.cpp)
add_executable(4-5 chapter4/4-5.cpp)
add_executable(4-6 chapter4/4-6.cpp)
add_executable(4-8 chapter4/4-8.cpp)
add_executable(4-9 chapter4/4-9.cpp)
add_executable(4-12 chapter4/4-12.cpp)

add_executable(07-AboutMultiplePointer chapter7/07-AboutMultiplePointer.cpp)
add_executable(4-13 chapter4/4-13.cpp)
add_executable(4-14 chapter4/4-14.cpp)
add_executable(4-15 chapter4/4-15.cpp)
add_executable(4-16 chapter4/4-16.cpp)
add_executable(5-9 chapter5/5-9.cpp)
add_executable(6-8 chapter6/6-8.cpp)
add_executable(6-21 chapter6/6-21.cpp)

add_executable(10-2 chapter10/10-2.cpp)
add_executable(10-3 chapter10/10-3.cpp)
add_executable(10-4 chapter10/10-4.cpp)
add_executable(10-5 chapter10/10-5.cpp)
add_executable(10-6 chapter10/10-6.cpp)
add_executable(10-7 chapter10/10-7.cpp)
add_executable(10-8 chapter10/10-8.cpp)