cmake_minimum_required(VERSION 3.19)
project(BlueLeopard)

set(CMAKE_CXX_STANDARD 11)
add_executable(BlueLeopard main.cpp)
add_executable(2-1 exercise/chapter2/2-1.cpp)
add_executable(2-2 exercise/chapter2/2-2.cpp)
add_executable(2-3 exercise/chapter2/2-3.cpp)
add_executable(2-4 exercise/chapter2/2-4.cpp)
add_executable(2-5 exercise/chapter2/2-5.cpp)
add_executable(2-6 exercise/chapter2/2-6.cpp)
add_executable(2-7 exercise/chapter2/2-7.cpp)
add_executable(2-8 exercise/chapter2/2-8.cpp)
add_executable(2-9 exercise/chapter2/2-9.cpp)
add_executable(2-10 exercise/chapter2/2-10.cpp)
add_executable(2-11 exercise/chapter2/2-11.cpp)
add_executable(3-1 exercise/chapter3/3-1.cpp)
add_executable(3-2 exercise/chapter3/3-2.cpp)
add_executable(3-4 exercise/chapter3/3-4.cpp)
add_executable(3-8 exercise/chapter3/3-8.cpp)
add_executable(3-9-1 exercise/chapter3/3-9-1.cpp)
add_executable(3-10 exercise/chapter3/3-10.cpp)
add_executable(3-9-2 exercise/chapter3/3-9-2.cpp)
add_executable(3-11 exercise/chapter3/3-11.cpp)
add_executable(3-13 exercise/chapter3/3-13.cpp)
add_executable(3-14 exercise/chapter3/3-14.cpp)
add_executable(4-2 exercise/chapter4/4-2.cpp)
add_executable(4-4 exercise/chapter4/4-4.cpp)
add_executable(4-5 exercise/chapter4/4-5.cpp)
add_executable(4-6 exercise/chapter4/4-6.cpp)
add_executable(4-8 exercise/chapter4/4-8.cpp)
add_executable(4-9 exercise/chapter4/4-9.cpp)
add_executable(4-12 exercise/chapter4/4-12.cpp)

add_executable(07-AboutMultiplePointer exercise/chapter7/07-AboutMultiplePointer.cpp)
add_executable(4-13 exercise/chapter4/4-13.cpp)
add_executable(4-14 exercise/chapter4/4-14.cpp)
add_executable(4-15 exercise/chapter4/4-15.cpp)
add_executable(4-16 exercise/chapter4/4-16.cpp)
add_executable(5-9 exercise/chapter5/5-9.cpp)
add_executable(6-8 exercise/chapter6/6-8.cpp)
add_executable(6-21 exercise/chapter6/6-21.cpp)

add_executable(10-2 exercise/chapter10/10-2.cpp)
add_executable(10-3 exercise/chapter10/10-3.cpp)
add_executable(10-4 exercise/chapter10/10-4.cpp)
add_executable(10-5 exercise/chapter10/10-5.cpp)
add_executable(10-6 exercise/chapter10/10-6.cpp)
add_executable(10-7 exercise/chapter10/10-7.cpp)
add_executable(10-8 exercise/chapter10/10-8.cpp)
add_executable(10-9 exercise/chapter10/10-9.cpp)
add_executable(Rational exercise/chapter10/Rational/Rational.cpp exercise/chapter10/Rational/Rational.h)
add_executable(10-12 exercise/chapter10/10-12.cpp)
add_executable(10-13 exercise/chapter10/10-13.cpp)
add_executable(10-14 exercise/chapter10/10-14.cpp)
add_executable(Rational_Operator textbook/chapter11/Rational_Operator.cpp textbook/chapter11/Rational_Operator.h)
add_executable(main_operator textbook/chapter11/main_Rational.cpp)
add_executable(DoubleArray_Operator textbook/chapter11/DoubleArray_Operator.cpp textbook/chapter11/DoubleArray_Operator.h)
add_executable(main_DoubleArray textbook/chapter11/main_DoubleArray.cpp)
add_executable(11-1 exercise/chapter11/11-1.cpp)
add_executable(11-2 exercise/chapter11/11-2.cpp)
add_executable(11-3 exercise/chapter11/11-3.cpp)
add_executable(11-4 exercise/chapter11/11-4.cpp)
add_executable(11-5 exercise/chapter11/11-5.cpp)
add_executable(11-6 exercise/chapter11/11-6.cpp)
add_executable(11-7 exercise/chapter11/11-7.cpp)
add_executable(12-1 12-1.cpp)
add_executable(12-2 12-2.cpp)
add_executable(12-3 12-3.cpp)
add_executable(13-1 13-1.cpp)
add_executable(13-2 13-2.cpp)
add_executable(14-1 14-1.cpp)
add_executable(14-2 14-2.cpp)
add_executable(14-3 14-3.cpp)
add_executable(15-1 15-1.cpp)
add_executable(16-1 16-1.cpp)
add_executable(16-2 16-2.cpp)
add_executable(2021-1 918-CXJGT/2021-1.cpp)
add_executable(2021-2 918-CXJGT/2021-2.cpp)
add_executable(2019-1 918-CXJGT/2019-1.cpp)
add_executable(2019-2 918-CXJGT/2019-2.cpp)
add_executable(2019-3 918-CXJGT/2019-3.cpp)
add_executable(2019-4 918-CXJGT/2019-4.cpp)
add_executable(2019-5 918-CXJGT/2019-5.cpp)
add_executable(BCT2021-1 918-BCT/BCT2021-1.cpp)
add_executable(BCT2021-2 918-BCT/BCT2021-2.cpp)
add_executable(BCT2021-3 918-BCT/BCT2021-3.cpp)
add_executable(BCT2021-4 918-BCT/BCT2021-4.cpp)
add_executable(BCT2020-1 918-BCT/BCT2020-1.cpp)
add_executable(BCT2020-2 918-BCT/BCT2020-2.cpp)
add_executable(BCT2020-3 918-BCT/BCT2020-3.cpp)
add_executable(BCT2020-4 918-BCT/BCT2020-4.cpp)
add_executable(problem_1 problems/problem_1.cpp)